# temm1e

./: CLAUDE.md  Cargo.toml  DEV_PROTOCOL.md  MIGRATION.md  README.md  VISION.md  install.sh
.github/workflows/: ci.yml  deps.yml  release.yml
config/: default.toml
crates/skyclaw-agent/: Cargo.toml
crates/temm1e-agent/: Cargo.toml
crates/temm1e-anima/: Cargo.toml
crates/temm1e-anima/src/: communication.rs  ethics.rs  evaluator.rs  facts.rs  lib.rs  personality.rs  storage.rs  types.rs  user_model.rs
crates/temm1e-cores/: Cargo.toml
crates/temm1e-cores/src/: invoke_tool.rs  types.rs
crates/temm1e-distill/: Cargo.toml
crates/temm1e-tools/: Cargo.toml
crates/temm1e-tui/: Cargo.toml
crates/temm1e-watchdog/: Cargo.toml
docs/: OPENAI_OAUTH_RESEARCH.md  RELEASE_PROTOCOL.md  TEM_CODE_RESEARCH.md
docs/benchmarks/: BENCHMARK_REPORT.md  memory-samples-2026-03-11.csv
docs/design/: DISPATCHER_REWORK.md  EXECUTABLE_DAG_PLAN.md  SELF_LEARNING_OPPORTUNITY_MATRIX.md
docs/full-sweep-1/: TUI-CLASSIFIER-HANG.md
scripts/: eigentune_unsloth.py  install-linux-deps.sh  release_update_smoke.sh
src/: main.rs
tems_blog/: persona-vs-functionality.md
tems_lab/: SELF_LEARNING_V460.md
tems_lab/consciousness/: EXPERIMENT_REPORT.md
tems_lab/debug/: IMPLEMENTATION.md  RESEARCH_PAPER.md
tems_lab/eigen/: CODE_ANCHORS.md  INTEGRATION_PLAN.md  LOCAL_ROUTING_SAFETY.md  RESEARCH_PAPER.md  SETUP.md
tems_labs/: x_mind_consciousness_logic.md  x_mind_experiment_report.md  x_mind_implementation_spec.md  x_mind_research_paper.md  x_mind_v2_architecture.md
(+128 files in other folders)
