[package]
name = "temm1e-anima"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Tem Anima — emotional intelligence, user profiling, personality system"

[dependencies]
temm1e-core.workspace = true
async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
tokio.workspace = true
tracing.workspace = true
sha2.workspace = true
chrono.workspace = true
